# w0bm-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2018-04-02-131533_create_users_table/: up.sql
migrations/2018-04-02-145524_create_tags_table/: down.sql  up.sql
migrations/2018-04-02-150413_create_videos_table/: up.sql
migrations/2018-04-02-153505_create_playlists_table/: down.sql  up.sql
migrations/2018-04-02-172412_create_comments_table/: down.sql  up.sql
migrations/2018-04-02-172818_create_messages_table/: down.sql  up.sql
migrations/2018-07-30-161915_helper_functions/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  util.rs
src/controllers/: mod.rs  user.rs  video.rs
src/models/: comment.rs  mod.rs  playlist.rs  tag.rs  user.rs  video.rs
