[package]
name = "w0bm-rs"
version = "0.1.0"
authors = ["belst <belst@w0bm.com>"]

[dependencies]
diesel = { version = "1.1", features = ["postgres", "chrono"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
derive-error-chain = "=0.11.0" # Workaround for dotenv with nightly
dotenv = "0.11"
rust-argon2 = "0.3"
rocket = { git = "https://github.com/w0bm/rocket", branch = "requestInFromParam" }
rocket_codegen = { git = "https://github.com/w0bm/rocket", branch = "requestInFromParam" }
rocket_contrib = { git = "https://github.com/w0bm/rocket", branch = "requestInFromParam" }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = { git = "https://github.com/w0bm/jsonwebtoken", rev = "1356449" }
ring = "0.13.0-alpha"
rand = "0.4"
slug = "0.1"