[package]
name = "w0bm-rs"
version = "0.1.0"
authors = ["belst <belst@w0bm.com>"]

[dependencies]
actix-web = { version = "0.7.2", features = ["alpn"] }
diesel = { version = "1.1", features = ["postgres", "chrono", "r2d2", "serde_json"] }
dotenv = "0.11"
rust-argon2 = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = { git = "https://github.com/Keats/jsonwebtoken.git" }
rand = "0.4"
ring = "0.13.2"
slug = "0.1"
futures = "0.1"
failure = "0.1"
num_cpus = "1.0"
log = "0.4"
env_logger = "0.5"
r2d2 = "0.8"
